--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-        <title>"kketg | Open source software for developers"</title>
+    <head profile>
+        <title>kketg | Open source software for developers</title>
+        <link rel="icon" type="image/png" href="images/icon.png">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="container">
-            ...
-          </div>
+        <div id="header">
+            <a href="/">
+                <!--The bg color is #717171-->
+                
+                <h1 id="headerText"><img src="images/icon.png" id="headerIcon" height="128px" width="128px">kketg</h1>
+            </a>
+        </div>
     </body>
 </html>
