addedd a whole thing

--- a/index.html
+++ b/index.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head profile>
-        <title>kketg | Open source software for developers</title>
-        <link rel="icon" type="image/png" href="images/icon.png">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div id="header">
-            <a href="/">
-                <!--The bg color is #717171-->
-                
-                <h1 id="headerText"><img src="images/icon.png" id="headerIcon" height="128px" width="128px">kketg</h1>
-            </a>
+<head profile>
+    <title>kketg | Open source software for developers</title>
+    <link rel="icon" type="image/png" href="images/icon.png">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <section id="header">
+        <a href="index.html">
+            <!--The bg color is #717171-->
+
+            <h1 id="headerText"><img src="images/icon.png" id="headerIcon" height="128px" width="128px">kketg</h1>
+        </a>
+    </section>
+    <section id="content">
+        <h3 class="contentHeaders">Projects</h3>
+        <div id="category">
+            <div class="categorylink">
+                <a href="https://kketg.github.io/jserv">
+                    jServ
+                </a>
+            </div>
+            <div class="categoryimage">
+                <a href="https://kketg.github.io/jserv">
+                    <img src="https://github.com/kketg/jServ/blob/master/Media/icon.png?raw=true" height="128px" width="128px">
+                </a>
+            </div>
+
         </div>
-    </body>
+    </section>
+</body>
+
 </html>
