--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </section>
     <section id="content">
         <h3 class="contentHeaders">Projects</h3>
-        <div id="category">
+        <div id="categoryjServ">
             <div class="categorylink">
                 <a href="https://kketg.github.io/jserv">
                     jServ
@@ -26,6 +26,19 @@
             <div class="categoryimage">
                 <a href="https://kketg.github.io/jserv">
                     <img src="https://github.com/kketg/jServ/blob/master/Media/icon.png?raw=true" height="128px" width="128px">
+                </a>
+            </div>
+
+        </div>
+        <div id="categoryVenture">
+            <div class="categorylink">
+                <a href="https://kketg.github.io/jserv">
+                    Venture Scout Advancement Tool
+                </a>
+            </div>
+            <div class="categoryimage">
+                <a href="https://github.com/kketg/Venture-Scout-Advancement-Tool">
+                    <img src="https://github.com/kketg/Venture-Scout-Advancement-Tool/raw/master/VentureIcon.png" height="128px" width="128px">
                 </a>
             </div>
 
