--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </section>
     <section id="content">
         <h3 class="contentHeaders">Projects</h3>
-        <div id="categoryjServ">
+        <div id="categoryjServ" class="category">
             <div class="categorylink">
                 <a href="https://kketg.github.io/jserv">
                     jServ
@@ -30,7 +30,7 @@
             </div>
 
         </div>
-        <div id="categoryVenture">
+        <div id="categoryVenture" class="category">
             <div class="categorylink">
                 <a href="https://kketg.github.io/jserv">
                     Venture Scout Advancement Tool
