--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </a>
             </div>
             <div class="categoryimage">
-                <a href="https://kketg.github.io/jserv">
+                <a href="https://kketg.github.io/jServ">
                     <img src="https://github.com/kketg/jServ/blob/master/Media/icon.png?raw=true" height="128px" width="128px">
                 </a>
             </div>
@@ -32,7 +32,7 @@
         </div>
         <div id="categoryVenture" class="category">
             <div class="categorylink">
-                <a href="https://kketg.github.io/jserv">
+                <a href="https://kketg.github.io/Venture-Scout-Advancement-Tool">
                     Venture Scout Advancement Tool
                 </a>
             </div>
