--- a/index.html
+++ b/index.html
@@ -17,28 +17,41 @@
     </section>
     <section id="content">
         <h3 class="contentHeaders">Projects</h3>
-        <div id="categoryjServ" class="category">
+        <div id="jServ" class="category">
             <div class="categorylink">
-                <a href="https://kketg.github.io/jserv">
+                <a href="https://kketg.github.io/jServ">
                     jServ
                 </a>
             </div>
             <div class="categoryimage">
                 <a href="https://kketg.github.io/jServ">
-                    <img src="https://github.com/kketg/jServ/blob/master/Media/icon.png?raw=true" height="128px" width="128px">
+                    <img src="images/jservicon.png" height="128px" width="128px">
                 </a>
             </div>
 
         </div>
-        <div id="categoryVenture" class="category">
+        <div id="Psych" class="category">
+            <div class="categorylink">
+                <a href="https://github.com/SomethingGeneric/Psych-Rewrite">
+                    Psych
+                </a>
+            </div>
+            <div class="categoryimage">
+                <a href="https://github.com/SomethingGeneric/Psych-Rewrite">
+                    <img src="images/psych logo.png" height="128px" width="128px">
+                </a>
+            </div>
+
+        </div>
+        <div id="Venture" class="category">
             <div class="categorylink">
                 <a href="https://kketg.github.io/Venture-Scout-Advancement-Tool">
                     Venture Scout Advancement Tool
                 </a>
             </div>
             <div class="categoryimage">
-                <a href="https://github.com/kketg/Venture-Scout-Advancement-Tool">
-                    <img src="https://github.com/kketg/Venture-Scout-Advancement-Tool/raw/master/VentureIcon.png" height="128px" width="128px">
+                <a href="https://kketg.github.io/Venture-Scout-Advancement-Tool">
+                    <img src="images/VentureIcon.png" height="128px" width="128px">
                 </a>
             </div>
 
