--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                     <img src="images/jservicon.png" height="128px" width="128px">
                 </a>
             </div>
+            <div class="categorynotes">
+                A flexible json database server
+            </div>
 
         </div>
         <div id="Psych" class="category">
@@ -41,6 +44,14 @@
                     <img src="images/psych logo.png" height="128px" width="128px">
                 </a>
             </div>
+            <div class="categorynotes">
+                <p>
+                    A tool for mass managing Git repos
+                </p>
+                <p>
+                    Developed with <a href="https://github.com/SomethingGeneric">SomethingGeneric</a>
+                </p>
+            </div>
 
         </div>
         <div id="Venture" class="category">
@@ -53,6 +64,14 @@
                 <a href="https://kketg.github.io/Venture-Scout-Advancement-Tool">
                     <img src="images/VentureIcon.png" height="128px" width="128px">
                 </a>
+            </div>
+            <div class="categorynotes">
+                <p>
+                    A web application that manages a local database of venturers and their ranks
+                </p>
+                <p>
+                    Developed with <a href="https://github.com/SomethingGeneric">SomethingGeneric</a>
+                </p>
             </div>
 
         </div>
