--- a/index.html
+++ b/index.html
@@ -8,14 +8,32 @@
 </head>
 
 <body>
-    <section id="header">
-        <a href="index.html">
-            <!--The bg color is #717171-->
+    <div id="header">
 
+        <a href="index.html" id="headerlink">
+            <!--The bg color is #717171-->
             <h1 id="headerText"><img src="images/icon.png" id="headerIcon" height="128px" width="128px">kketg</h1>
         </a>
-    </section>
-    <section id="content">
+        <div id="links">
+            <a href="https://github.com/kketg" class="links">
+                <img src="images/github.png" height="50px" width="50px">
+            </a>
+
+            <a href="https://patreon.com/kketg" class="links">
+                <img src="images/patreon.jpg" height="50px" width="50px">
+            </a>
+            <a href="https://ko-fi.com/kketg" class="links">
+                <img src="images/ko-fi.png" height="50px" width="50px">
+            </a>
+            <a href="https://liberapay.com/kketg" class="links">
+                <img src="images/liberapay.png" height="50px" width="50px">
+            </a>
+        </div>
+
+
+
+    </div>
+    <div id="content">
         <h3 class="contentHeaders">Projects</h3>
         <div id="jServ" class="category">
             <div class="categorylink">
@@ -75,7 +93,7 @@
             </div>
 
         </div>
-    </section>
+    </div>
 </body>
 
 </html>
