added video embed

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
             <h1 id="headerText"><img src="images/icon.png" id="headerIcon" height="128px" width="128px">kketg</h1>
         </a>
         <div id="links">
+            <a href="https://www.youtube.com/channel/UCdiEsmWykNMZCXX7B4ht96Q" class="links">
+                <img src="images/youtube.png" height="50px" width="50px">
+            </a>
             <a href="https://github.com/kketg" class="links">
                 <img src="images/github.png" height="50px" width="50px">
             </a>
-
             <a href="https://patreon.com/kketg" class="links">
                 <img src="images/patreon.jpg" height="50px" width="50px">
             </a>
@@ -33,6 +35,12 @@
 
 
     </div>
+    <div id="video">
+        <h3 class="contentHeaders">Video</h3>
+        <iframe class="videoembed" width="560" height="315" src="https://www.youtube.com/embed/yB-lolPI_8U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+
     <div id="content">
         <h3 class="contentHeaders">Projects</h3>
         <div id="jServ" class="category">
