--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
     <div id="video">
         <h3 class="contentHeaders">Video</h3>
-        <iframe class="videoembed" width="560" height="315" src="https://www.youtube.com/embed/yB-lolPI_8U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/C730YPIiLNk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
 
