Updated channel and video

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1 id="headerText"><img src="images/icon.png" id="headerIcon" height="128px" width="128px">kketg</h1>
         </a>
         <div id="links">
-            <a href="https://www.youtube.com/channel/UCdiEsmWykNMZCXX7B4ht96Q" class="links">
+            <a href="https://www.youtube.com/channel/UC4wi_0cq-OG8F3QGkvLNgag" class="links">
                 <img src="images/youtube.png" height="50px" width="50px">
             </a>
             <a href="https://github.com/kketg" class="links">
@@ -37,7 +37,7 @@
     </div>
     <div id="video">
         <h3 class="contentHeaders">Video</h3>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/C730YPIiLNk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/h_7tjaa3U4A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
 
