--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
             <a href="https://ko-fi.com/kketg" class="links">
                 <img src="images/ko-fi.png" height="50px" width="50px">
             </a>
-            <a href="https://liberapay.com/kketg" class="links">
-                <img src="images/liberapay.png" height="50px" width="50px">
-            </a>
         </div>
 
 
@@ -37,7 +34,7 @@
     </div>
     <div id="video">
         <h3 class="contentHeaders">Video</h3>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/h_7tjaa3U4A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/z9lBBWcH5Qw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
 
