--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h3 class="contentHeaders">Projects</h3>
         <div id="jServ" class="category">
             <div class="categorylink">
-                <a href="https://kketg.github.io/jServ">
+                <a href="https://github.com/kketg/jServ">
                     jServ
                 </a>
             </div>
@@ -79,7 +79,7 @@
         </div>
         <div id="Venture" class="category">
             <div class="categorylink">
-                <a href="https://kketg.github.io/Venture-Scout-Advancement-Tool">
+                <a href="https://github.com/kketg/Venture-Scout-Advancement-Tool">
                     Venture Scout Advancement Tool
                 </a>
             </div>
