--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </a>
             </div>
             <div class="categoryimage">
-                <a href="https://kketg.github.io/jServ">
+                <a href="https://github.com/kketg/jServ">
                     <img src="images/jservicon.png" height="128px" width="128px">
                 </a>
             </div>
@@ -84,7 +84,7 @@
                 </a>
             </div>
             <div class="categoryimage">
-                <a href="https://kketg.github.io/Venture-Scout-Advancement-Tool">
+                <a href="https://github.com/kketg/Venture-Scout-Advancement-Tool">
                     <img src="images/VentureIcon.png" height="128px" width="128px">
                 </a>
             </div>
