changed psych to sparkplug

--- a/index.html
+++ b/index.html
@@ -56,26 +56,25 @@
             </div>
 
         </div>
-        <div id="Psych" class="category">
+        <div id="Sparkplug" class="category">
             <div class="categorylink">
-                <a href="https://github.com/SomethingGeneric/Psych-Rewrite">
+                <a href="https://github.com/SparkplugTeam">
                     Psych
                 </a>
             </div>
-            <div class="categoryimage">
-                <a href="https://github.com/SomethingGeneric/Psych-Rewrite">
+            <!--<div class="categoryimage">
+                <a href="https://github.com/SparkplugTeam">
                     <img src="images/psych logo.png" height="128px" width="128px">
                 </a>
-            </div>
+            </div>-->
             <div class="categorynotes">
                 <p>
-                    A tool for mass managing Git repos
+                    A privacy oriented social media site using jServ
                 </p>
                 <p>
                     Developed with <a href="https://github.com/SomethingGeneric">SomethingGeneric</a>
                 </p>
             </div>
-
         </div>
         <div id="Venture" class="category">
             <div class="categorylink">
