fixed sparkplug title

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div id="Sparkplug" class="category">
             <div class="categorylink">
                 <a href="https://github.com/SparkplugTeam">
-                    Psych
+                    Sparkplug
                 </a>
             </div>
             <!--<div class="categoryimage">
