KOTL WebGL Build

--- a/index.html
+++ b/index.html
@@ -40,6 +40,22 @@
 
     <div id="content">
         <h3 class="contentHeaders">Projects</h3>
+        <div id="kotl" class="category">
+            <div class="categorylink">
+                <a href="kotl.html">
+                    Keepers of the Light
+                </a>
+            </div>
+            <div class="categoryimage">
+                <a href="kotl.html">
+                    <img src="images/icon.png" height="128px" width="128px">
+                </a>
+            </div>
+            <div class="categorynotes">
+                An original indie game
+            </div>
+
+        </div>
         <div id="jServ" class="category">
             <div class="categorylink">
                 <a href="https://github.com/kketg/jServ">
