added copyright statement

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
     </div>
     <div id="copyright">
-
+        Copyright (c) 2021, Kristofer Ter-Gabrielyan. All Rights Reserved.
     </div>
 </body>
 
