--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                     Sparkplug
                 </a>
             </div>
-            <!--<div class="categoryimage">
+            <!--oofie
+                <div class="categoryimage">
                 <a href="https://github.com/SparkplugTeam">
                     <img src="images/psych logo.png" height="128px" width="128px">
                 </a>
