--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </a>
             </div>
             <div class="categorynotes">
-                An original indie adventure game
+                An original indie game, 7 years in the making
             </div>
 
         </div>
