--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <div id="video">
         <h3 class="contentHeaders">Video</h3>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/zVtZfz8hf64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLxXBbGk0AMMOmGpO_KjNM9IFjr2YeSXKk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 
 
