--- a/kotl.html
+++ b/kotl.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/0.0.0.0.2WebGL.loader.js";
+      var loaderUrl = buildUrl + "/0.0.0.0.2 WebGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/0.0.0.0.2WebGL.data.gz",
-        frameworkUrl: buildUrl + "/0.0.0.0.2WebGL.framework.js.gz",
-        codeUrl: buildUrl + "/0.0.0.0.2WebGL.wasm.gz",
+        dataUrl: buildUrl + "/0.0.0.0.2 WebGL.data",
+        frameworkUrl: buildUrl + "/0.0.0.0.2 WebGL.framework.js",
+        codeUrl: buildUrl + "/0.0.0.0.2 WebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Alchemi",
         productName: "Keepers of the Light",
